# FightingWolf

./: README.md
cam_yolov5_for_vehicle/src/ros-yolov5/: CMakeLists.txt  package.xml
cam_yolov5_for_vehicle/src/ros-yolov5/config/: config.yaml
cam_yolov5_for_vehicle/src/ros-yolov5/src/: action_client_demo.cpp  demo_service_server.py  service_client_demo.cpp
test/test13/: README  readme.txt
test/test13/cav_path_follower/: controler.py  main_test.py  pub_and_sub.py  testdata.csv  trajectory_generate_UTM.py
test/test13/src/cav_msgs/: CMakeLists.txt
test/test13/src/cav_msgs/msg/: Control.msg  Gpybm.msg  VehicleState.msg
test/test13/src/cav_simulation/: CMakeLists.txt  package.xml
test/test13/src/cav_simulation/launch/: cav_simulation_qiyansuo.launch
test/test13/src/cav_simulation/src/: datadefine.hpp  main.cpp  vehicle.cpp
